[gd_scene load_steps=12 format=2]

[ext_resource path="res://levels/Toll.gd" type="Script" id=1]
[ext_resource path="res://levels/toll.png" type="Texture" id=2]
[ext_resource path="res://fonts/TollSignFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://fonts/TollInstructionsFont.tres" type="DynamicFont" id=4]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 89.7056, 40.8052 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 75.5348, 71.7694 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 80.8158, 73.8241 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 82.9385, 38.5544 )

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 81.6133, 47.1536 )

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 89.4474, 46.075 )

[sub_resource type="RectangleShape2D" id=7]

custom_solver_bias = 0.0
extents = Vector2( 84.1446, 56.3315 )

[node name="Toll" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="KillZones" type="Area2D" parent="." index="1"]

editor/display_folded = true
visible = false
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 64
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape1" type="CollisionShape2D" parent="KillZones" index="0"]

position = Vector2( 99.174, 34.6797 )
shape = SubResource( 1 )

[node name="CollisionShape2" type="CollisionShape2D" parent="KillZones" index="1"]

position = Vector2( 102.669, 238.496 )
shape = SubResource( 2 )

[node name="CollisionShape3" type="CollisionShape2D" parent="KillZones" index="2"]

position = Vector2( 102.571, 473.237 )
shape = SubResource( 3 )

[node name="CollisionShape4" type="CollisionShape2D" parent="KillZones" index="3"]

position = Vector2( 96.9527, 687.353 )
shape = SubResource( 4 )

[node name="Labels" type="Node2D" parent="." index="2"]

editor/display_folded = true

[node name="TollLabel" type="Label" parent="Labels" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 61.0
margin_top = 23.0
margin_right = 143.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
text = "TOLL"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="TollWeapon" type="Label" parent="Labels" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 52.0
margin_top = 177.0
margin_right = 149.0
margin_bottom = 218.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 4 )
text = "Sacrifice
a weapon"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="TollSubsystem" type="Label" parent="Labels" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 41.0
margin_top = 408.0
margin_right = 168.0
margin_bottom = 449.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 4 )
text = "Sacrifice a
subsystem"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="TollSubsystem2" type="Label" parent="Labels" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 31.0
margin_top = 655.0
margin_right = 170.0
margin_bottom = 696.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 4 )
text = "Sacrifice a
crew member"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="SacrificeWeapon" type="Area2D" parent="." index="3"]

position = Vector2( 98.8918, 118.86 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 128
audio_bus_override = false
audio_bus_name = "Master"
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="SacrificeWeapon" index="0"]

visible = false
shape = SubResource( 5 )

[node name="SacrificeSubsystem" type="Area2D" parent="." index="4"]

position = Vector2( 108.529, 352.99 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 128
audio_bus_override = false
audio_bus_name = "Master"
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="SacrificeSubsystem" index="0"]

visible = false
shape = SubResource( 6 )

[node name="SacrificeCrewMember" type="Area2D" parent="." index="5"]

position = Vector2( 101.992, 597.01 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 128
audio_bus_override = false
audio_bus_name = "Master"
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="SacrificeCrewMember" index="0"]

visible = false
shape = SubResource( 7 )

[connection signal="area_entered" from="SacrificeWeapon" to="." method="_on_SacrificeWeaponAreaEntered"]

[connection signal="area_entered" from="SacrificeSubsystem" to="." method="_onSacrificeSubsystemAreaEntered"]

[connection signal="area_entered" from="SacrificeCrewMember" to="." method="_onSacrificeCrewMemberAreaEntered"]


